# wolfpack-product-bundles

./: .eslintrc.cjs  .gitignore  .graphifyignore  AGENTS.md  ARROW_POSITIONING_SYSTEM.md  BUNDLE_TYPE_SEPARATION_SUMMARY.md  CART_TRANSFORM_SETUP.md  CLAUDE.md  CONTINUATION_PROMPT.md  DCP_IMPLEMENTATION_SUMMARY.md  DEVELOPER_GUIDE.md  DISCOUNT_UI_DEBUG.md  Dockerfile  FULL_PAGE_BUNDLE_IMPLEMENTATION_PLAN.md  GLOBAL_COLORS_MAPPING.md  IMPLEMENTATION_SUMMARY.md  README.md  broader-PPB-template-parity.md  bundle_widget_refactor_agentic_loop_all_templates.md  create-full-page-bundle.cjs  create-product-page-bundle.cjs  env.d.ts  feature-pipeline.skill  fpb-desktop-summary-sidebar-css-parity-agentic-loop-plan-agnostic.md  fpb-mobile-footer-css-parity-agentic-loop-plan-agnostic.md  fpb-mobile-product-card-css-parity-agentic-loop-plan-agnostic.md  graphql.config.js  index.js  jest.config.js  lighthouserc.json  package-lock.json  package.json  product-card-parity-agentic-loop-plan.md  run-all-tests.cjs  sample.md  shopify.app.bundle-discount-functions.toml  shopify.app.toml  shopify.app.wolfpack-product-bundles-dev.toml  shopify.app.wolfpack-product-bundles-sit.toml  tailwind.config.js  (+9 more)
extensions/bundle-cart-transform-rs/: .gitignore  Cargo.toml  rstestinput.json  schema.graphql  shopify.extension.toml  test-expand-flex-bundle.json  test-merge-condition.json  test-merge-fixed-amount.json  test-merge-fixed-price.json  test-merge-free-gift.json  test-mixed-cart.json  test-multicurrency.json
extensions/bundle-cart-transform-rs/src/: expand.rs  helpers.rs  helpers_tests.rs  lib.rs  (+8 more)
(+7817 files in other folders)
