[package]
name = "bundle-cart-transform-rs"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shopify_function = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true        # link-time optimization — smaller binary
opt-level = 'z'   # optimize for size over speed
strip = true      # strip debug symbols from final .wasm
