[package]
name = "bundle-cart-transform-rs"
version = "1.0.0"
edition = "2021"
autobins = false

[lib]
name = "bundle_cart_transform_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
shopify_function = "=2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true        # link-time optimization — smaller binary
opt-level = 'z'   # optimize for size over speed
strip = true      # strip debug symbols from final .wasm
